--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -128,6 +128,10 @@
 		@include respond(tab-port) {
 			font-size: 4.2rem;
 		}
+
+		@include respond(mobileS) {
+			font-size: 3.6rem;
+		}
 	}
 
 	h2 {
